[package]
name = "try-tokio-graceful-shutdown"
version = "0.1.0"
edition = "2021"
authors = ["ryskit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
tokio = { version = "1.16.1", features = ["full"] }
rand = "0.8.4"
